syntax = "proto3";

package resources.jobs;

import "buf/validate/validate.proto";
import "tagger/tagger.proto";

option go_package = "github.com/fivenet-app/fivenet/v2025/gen/go/proto/resources/jobs;jobs";

message Job {
  string name = 1 [
    (buf.validate.field).string.max_len = 50,
    (tagger.tags) = "sql:\"primary_key\" alias:\"name\""
  ];
  string label = 2 [(buf.validate.field).string.max_len = 50];
  repeated JobGrade grades = 3;
}

message JobGrade {
  optional string job_name = 1 [(buf.validate.field).string.max_len = 50];
  int32 grade = 2 [(buf.validate.field).int32.gte = 0];
  string label = 3 [(buf.validate.field).string.max_len = 50];
}
